# cmake-boilerplate

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.FC52EE294629458B.idx
src/: main.cpp
